# carbonchain

./: CHANGELOG.md  CONTRIBUTING.md  FEATURES_IMPLEMENTED.md  IMPLEMENTATION_SUMMARY.md  PR_CHECKLIST.md  QUICK_START.md  README.md  SECURITY.md  docker-compose.yml
contracts/credit_registry/: Cargo.toml
contracts/credit_registry/src/: errors.rs  events.rs  lib.rs  storage.rs  test_helpers.rs  types.rs
contracts/credit_registry/test_snapshots/tests/: test_admin_can_configure_verifier_services.1.json  test_approve_and_mint_fails_for_active_credit.1.json  test_approve_and_mint_fails_for_flagged_credit.1.json  test_approve_and_mint_fails_for_retired_credit.1.json  test_double_flag_fails.1.json  test_get_credit_returns_credit_metadata.1.json  test_get_credit_returns_error_for_missing_credit.1.json  test_get_session_operation_count_returns_error_for_missing_session.1.json  test_list_verifiers_paginated.1.json  test_mark_retired.1.json  test_non_admin_cannot_pause.1.json  test_non_verifier_cannot_approve.1.json  test_nonce_cannot_be_replayed_after_ttl_reset.1.json  test_pause_blocks_approve_and_mint.1.json  test_pause_blocks_submit_credit.1.json  test_register_verifier_emits_event.1.json  test_split_credit_creates_two_children.1.json  test_split_credit_retires_original.1.json  test_submit_credit_allows_different_project_same_vintage.1.json  test_submit_credit_allows_same_project_different_vintage.1.json  test_submit_credit_at_upper_bound_succeeds.1.json  test_submit_credit_duplicate_project_vintage_fails.1.json  test_submit_credit_non_multiple_of_min_unit_fails.1.json  test_transfer_credit_changes_owner.1.json  test_transfer_credit_requires_ownership.1.json  test_unpause_restores_submit_credit.1.json  test_verifier_cannot_self_configure_services.1.json  (+2 more)
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: lib.rs
contracts/retirement/: Cargo.toml
contracts/retirement/src/: errors.rs  lib.rs  types.rs
(+183 files in other folders)
