[package]
name = "carbonchain-credit-registry"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "26.0.1"

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
library = []
