[package]
name = "carbonchain-retirement"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "26.0.1"
carbonchain-credit-registry = { path = "../credit_registry", features = ["library"] }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
carbonchain-credit-registry = { path = "../credit_registry", features = ["testutils"] }
